Fix overflow bug

--- a/src/styles/components/background.css
+++ b/src/styles/components/background.css
@@ -1,9 +1,9 @@
 .background {
-    position: absolute;
+    position: fixed;
     top: 0;
     z-index: -1;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     opacity: 0.1;
     background-image: url("src/assets/background-pattern.svg");
     background-repeat: repeat;
