--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,9 +7,7 @@
     box-sizing: border-box;
 }
 
-body {
-    min-height: 100vh;
-}
+
 
 ::-webkit-scrollbar {
     height: 12px;
